Tweaked the navbar, fixed alignment issues, created script.js

--- a/style.css
+++ b/style.css
@@ -112,12 +112,6 @@ html, body {
   .logo-img {
     width: 50px;
     height: 50px;
-    transition: transform 0.4s ease, box-shadow 0.4s ease;
-    cursor: pointer;
-  }
-
-  .logo-img:hover {
-    transform: scale(1.1);
   }
   
   .navbar {
@@ -158,6 +152,7 @@ html, body {
   
   .nav-link:hover {
     color: #a86565;
+    transform: scale(1.05);
   }
   
   .hamburger {
