--- a/style2.css
+++ b/style2.css
@@ -89,7 +89,6 @@ p {
 .nav-link.active {
   color: #a86565;
   font-weight: bold;
-  border-bottom: 2px solid #a86565;
   pointer-events: none;
 }
 
@@ -231,7 +230,7 @@ p {
   background-color: #ebcaca;
   box-shadow: 0 20px 40px rgba(209, 161, 161, 0.2);
   transform-origin: center;
-  transition: transform 0.6s ease, opacity 0.6s ease, z-index 0s 0.6s;
+  transition: transform 2s ease, opacity 0.6s ease, z-index 0s 0.6s;
   opacity: 0;
   transform: scale(0.95) translateY(40px) rotateZ(0deg);
   pointer-events: none;
@@ -487,6 +486,10 @@ p {
   animation-delay: 1s;
 }
 
+.about-text p {
+  text-align: center;
+}
+
 .certifications-section {
   flex-direction: column;
   height: auto;
@@ -513,6 +516,10 @@ p {
   transform: translateY(-50px); 
   animation: fadeSlideFromTop 1s ease-out forwards;
   animation-delay: 1s;
+}
+
+.cert-description p {
+  text-align: center;
 }
 
 .card {
@@ -549,6 +556,10 @@ p {
   animation-delay: 1s;
 }
 
+.tech-content p {
+  text-align: center;
+}
+
 .tech-grid {
   grid-template-columns: repeat(2, 1fr);
 }
@@ -575,6 +586,10 @@ p {
   transform: translateY(-50px); 
   animation: fadeSlideFromTop 1s ease-out forwards;
   animation-delay: 1s;
+}
+
+.contact-content p {
+  text-align: center;
 }
 
 .socials {
